jetty to indexcore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 */target/**
+.classpath
+.project
+.settings/
+indexBroker/.classpath
+indexBroker/.project
+indexBroker/.settings/
+indexCommon/.classpath
+indexCommon/.project
+indexCommon/.settings/
+indexCore/.classpath
+indexCore/.project
+indexCore/.settings/
+sampleClient/.classpath
+sampleClient/.project
+sampleClient/.settings/
+sampleIndexer/.classpath
+sampleIndexer/.project
+sampleIndexer/.settings/
