--- a/indexCore/pom.xml
+++ b/indexCore/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>lucene-queryparser</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
