--- a/indexCore/pom.xml
+++ b/indexCore/pom.xml
@@ -8,6 +8,10 @@
 	</parent>
 	<artifactId>indexCore</artifactId>
 
+	<properties>
+		<jettyVersion>8.1.8.v20121106</jettyVersion>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>ar.fi.uba</groupId>
@@ -32,6 +36,13 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
+			<version>${jettyVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
