--- a/indexCommon/pom.xml
+++ b/indexCommon/pom.xml
@@ -44,6 +44,16 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.curator</groupId>
+			<artifactId>curator-x-discovery</artifactId>
+			<version>1.2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
