--- a/indexCommon/pom.xml
+++ b/indexCommon/pom.xml
@@ -51,8 +51,20 @@
 		</dependency>
 		<dependency>
 			<groupId>com.netflix.curator</groupId>
-			<artifactId>curator-x-discovery</artifactId>
-			<version>1.2.6</version>
+			<artifactId>curator-recipes</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.curator</groupId>
+			<artifactId>curator-test</artifactId>
+			<version>1.3.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
