--- a/indexCore/pom.xml
+++ b/indexCore/pom.xml
@@ -70,7 +70,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>ar.uba.fi.tppro.core.service.IndexCore</mainClass>
+							<mainClass>ar.uba.fi.tppro.core.service.IndexServer</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
