--- a/console/pom.xml
+++ b/console/pom.xml
@@ -6,16 +6,40 @@
 		<artifactId>tp-pro</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>sampleClient</artifactId>
+	<artifactId>console</artifactId>
+
+	<properties>
+		<slf4jVersion>1.6.1</slf4jVersion>
+	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.netflix.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 		<dependency>
 			<groupId>ar.fi.uba</groupId>
 			<artifactId>indexCommon</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4jVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4jVersion}</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -34,11 +58,12 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>ar.uba.fi.tppro.client.SearchDocsBase</mainClass>
+							<mainClass>ar.uba.fi.tppro.core.service.IndexCore</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
