--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 		<module>indexCommon</module>
 		<module>console</module>
 		<module>monitor</module>
+		<module>stress</module>
 	</modules>
+
+	<properties>
+		<slf4jVersion>1.6.1</slf4jVersion>
+	</properties>
 </project>
