--- a/console/pom.xml
+++ b/console/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4jVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>2.6</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
