java 7 en el pom

--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,15 @@
 	<properties>
 		<slf4jVersion>1.6.1</slf4jVersion>
 	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
